Fixing for mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div id="notification" class="notification ishidden">You're over your kitten limit!</div>
   </div>
   <main class="container">
-    <div id="welcome" class="d-flex justify-content-center">
+    <div id="welcome" class="d-table">  
+      <!-- the above was d-flex and justify-content-center, changed for mobile -->
       <div class="card p-2 text-center w-50">
         <img src="moody-logo.png" height="250" alt="Moody Kittens">
         <div class="mt-2">
