--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <main class="container">
     <div id="welcome" class="d-flex justify-content-center">  
-      <div class="card p-2 text-center w-50">
+      <div class="card p-sides text-center w-50">
         <img src="moody-logo.png" height="250" alt="Moody Kittens">
         <div class="mt-2">
           <b class="text-center font-bungee">Welcome!</b>
