--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div id="notification" class="notification ishidden">You're over your kitten limit!</div>
   </div>
   <main class="container">
-    <div id="welcome" class="d-flex justify-content-center">  
-      <div class="card p-sides text-center w-50">
+    <div id="welcome">  
+      <div class="card w-50">
         <img src="moody-logo.png" height="250" alt="Moody Kittens">
         <div class="mt-2">
           <b class="text-center font-bungee">Welcome!</b>
